<resources>
    <string name="app_name">ProBikeTech</string>
    <string name="addBike_name">Add a new Bike</string>
    <string name="addActivity_name">Add a new Activity</string>

    <string name="addBike_brand">Enter the Make</string>
    <string name="addBike_Model">Enter the Model</string>
    <string name="addBike_submit">Submit</string>
    <string name="addBike_dop">Enter the Date of Purchase</string>
    <string name="add_a_photo">Add a Photo</string>
    <string name="activityDistance">Distance for this Activity</string>
    <string name="addComponent_submit">Submit</string>
    <string name="add_component">Add a component</string>
    <string name="add_lifetime">Add component lifetime</string>
    <string name="componentLTTitle">Component Lifetime:</string>
    <string name="dopTitle">Date of Purchase:</string>


    <string-array name="listOfBikes">
        <item>Bike1</item>
        <item>Bike2</item>
    </string-array>
</resources>
