<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.AddComponentActivity">


    <EditText
        android:id="@+id/componentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="88dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="93dp"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/add_component"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/componentLifetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="88dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="93dp"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/add_lifetime"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/componentDate"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="89dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="88dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/componentAddBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="320dp"
        android:layout_marginBottom="291dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/addComponent_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</RelativeLayout>